--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,21 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+/* right-column*/
+.right-column {
+  flex-grow: 1;
+  padding: 20px;
+}
+.right-column textarea {
+  border: none;
+  width: 100%;
+  height: 150px;
+  resize: none;
+  padding: 10px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+  //background: url(./paper2.jpg);
+}
+.right-column button {
+  width: 100%;
+}
