--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,7 @@
 }
 .left-body li {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   border-bottom: 1px solid #cfcfcf;
   padding: 10px;
 }
@@ -47,6 +47,18 @@
   cursor: pointer;
   text-decoration: underline;
 }
+.left-body li a {
+  color: #cfcfcf;
+  align-self: flex-end;
+}
+.left-body li a:hover {
+  color: red;
+  text-decoration: underline;
+}
+.left-body li a:focus {
+  color: red;
+  text-decoration: underline;
+}
 
 /* right-column*/
 .right-column {
@@ -56,7 +68,7 @@
 .right-column textarea {
   border: none;
   width: 100%;
-  height: 150px;
+  height: 60vh;
   resize: none;
   padding: 10px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
@@ -64,4 +76,17 @@
 }
 .right-column button {
   width: 100%;
+}
+
+.ant-collapse.ant-collapse-borderless {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.ant-collapse-item.ant-collapse-item-active {
+  width: 33%;
+  min-width: 250px;
+}
+.ant-collapse-borderless > .ant-collapse-item {
+  border: none;
 }
